// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiTabs props display condensed is rendered 1`] = `
<div
  class="euiTabs euiTabs--condensed"
  role="tablist"
>
  children
</div>
`;

exports[`EuiTabs props display default is rendered 1`] = `
<div
  class="euiTabs"
  role="tablist"
>
  children
</div>
`;

exports[`EuiTabs props expand is rendered 1`] = `
<div
  class="euiTabs euiTabs--expand"
  role="tablist"
>
  children
</div>
`;

exports[`EuiTabs props size l is rendered 1`] = `
<div
  class="euiTabs euiTabs--large"
  role="tablist"
>
  children
</div>
`;

exports[`EuiTabs props size m is rendered 1`] = `
<div
  class="euiTabs"
  role="tablist"
>
  children
</div>
`;

exports[`EuiTabs props size s is rendered 1`] = `
<div
  class="euiTabs euiTabs--small"
  role="tablist"
>
  children
</div>
`;

exports[`EuiTabs renders 1`] = `
<div
  aria-label="aria-label"
  class="euiTabs testClass1 testClass2"
  data-test-subj="test subject string"
  role="tablist"
>
  children
</div>
`;
